<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TouchActivity"
    android:background="@color/primary">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
            android:id="@+id/linearlayout_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/scroll_to_access_more_detectors"
                android:textColor="@color/highlight"
                android:textSize="20sp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_install"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:padding="20dp"
                android:text="@string/install_plugins"
                android:textColor="@color/icons"
                android:textOff=""
                android:textOn="" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:padding="20dp"
                android:text="@string/experience_plugins"
                android:textColor="@color/icons"
                android:textOff=""
                android:textOn="" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:padding="20dp"
                android:text="@string/instructions"
                android:textColor="@color/icons"
                android:textOff=""
                android:textOn="" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:padding="20dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/icons"
                android:textOff=""
                android:textOn="" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/service_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:padding="20dp"
                android:text="@string/service_agreement"
                android:textColor="@color/icons"
                android:textOff=""
                android:textOn="" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/open_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:button="@null"
                android:padding="20dp"
                android:text="@string/touch_opensource"
                android:textColor="@color/icons"
                android:textOff=""
                android:textOn="" />

            <Button
                android:id="@+id/btn_touchevent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:background="@color/accent"
                android:text="@string/touch_help"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/textView_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_touchevent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/scrollview"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:background="@drawable/result_bg_cornerflat"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/hit_area"
                android:textSize="10sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
